fixed proficiency overflow on odd size screen

--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,7 @@ box-shadow: -2px -2px 3px var(--cornsilk);
   margin: 2vmin;
   height: 70vh;
   padding: 4vmin;
+  height: max-content;
 }
 
 .proficiencyList li{
@@ -270,11 +271,13 @@ box-shadow: -2px -2px 3px var(--cornsilk);
 #contact-form textarea {
   flex: 2 auto;
   padding: 2vmin;
+  max-width: 100%;
 }
 
 #contact-form input{
   flex: 2 auto;
   padding: 2vmin;
+  max-width: 100%;
 }
 
 #contact-form button{
@@ -284,7 +287,7 @@ box-shadow: -2px -2px 3px var(--cornsilk);
   border-style: inset;
   border-color: var(--cornsilk);
   box-shadow: -3px -2px 4px var(--dark-olive-green);
-  width: 33%;
+  min-width: fit-content;
   align-self: center;
 }
 #contact-form button:hover{
